# openqa_review

./: .coveragerc  .gitignore  .mergify.yml  .travis.yml  LICENSE  README.md  TODO  call_tests  generate_changelog  index.html  nosier  nosier_all  params.json  pyproject.toml  pytest_no_webtest  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yaml
dashboard_files/: bootstrap.css  bootstrap.js  dashboard.html.in
openqa_review/: browser.py  investigate.py  openqa_review.py  tumblesle_release.py
tests/: :tests:overview%3Fdistri%3Dopensuse%26version%3D15%26build%3D162.2%26groupid%3D26  :tests:overview%3Fdistri%3Dopensuse%26version%3D15%26build%3D170.1%26groupid%3D26  :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1%26build%3D0308%26groupid%3D25  :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1%26build%3D0311%26groupid%3D25  :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1%26build%3D0313%26groupid%3D25  :tests:overview%3Fdistri%3Dopensuse%26version%3DTumbleweed%26build%3D20160916%26groupid%3D4  :tests:overview%3Fdistri%3Dopensuse%26version%3DTumbleweed%26build%3D20160917%26groupid%3D4  :tests:overview.json%3Fdistri%3Dopensuse%26version%3D42.1%26build%3D1507%26groupid%3D25  :tests:overview.json%3Fdistri%3Dopensuse%26version%3DTumbleweed%26build%3D20160916%26groupid%3D4  :tests:overview.json%3Fdistri%3Dopensuse%26version%3DTumbleweed%26build%3D20160917%26groupid%3D4  conftest.py  https%3A::openqa.opensuse.org:group_overview:25.json  https%3A::openqa.opensuse.org:group_overview:26.json  https%3A::openqa.opensuse.org:group_overview:4  https%3A::openqa.opensuse.org:group_overview:4.json  https%3A::openqa.suse.de:tests:169785:file:autoinst-log.txt  https%3A::openqa.suse.de:tests:169793:file:autoinst-log.txt  https%3A::openqa.suse.de:tests:169801:file:autoinst-log.txt  https%3A::openqa.suse.de:tests:169827:file:autoinst-log.txt  report25_T.md  report25_TT.md  report25_TTT.md  report25_TTTT.md  report25_terse.md  test_openqa_review.py  test_tumblesle_release.py
tests/broken-softfails/: :api:v1:jobs:5590738:details  :api:v1:jobs:5590739:details  :tests:5590738:file:details-netns_sysfs.json  :tests:5590739:file:details-yet-another-detail.json  :tests:overview%3Fdistri%3Dsle%26version%3D11-SP3%26build%3D%253A18520%253Akernel-ec2%26groupid%3D161  report-broken-softfails.md
tests/bugzilla/: :jsonrpc.cgi%3Fmethod%3DBug.comments%26params%3D%255B%257B%2522ids%2522%253A%2B%255B815%255D%257D%255D  :jsonrpc.cgi%3Fmethod%3DBug.get%26params%3D%255B%257B%2522ids%2522%253A%2B%255B0815%255D%257D%255D  :jsonrpc.cgi%3Fmethod%3DBug.get%26params%3D%255B%257B%2522ids%2522%253A%2B%255B815%255D%257D%255D  :jsonrpc.cgi%3Fmethod%3DBug.get%26params%3D%255B%257B%2522ids%2522%253A%2B%255B9315715%255D%257D%255D  :jsonrpc.cgi%3Fmethod%3DBug.get%26params%3D%255B%257B%2522ids%2522%253A%2B%255B9315716%255D%257D%255D
tests/differing_tests/: :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1%26build%3D0389%26groupid%3D25  :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1%26build%3D0405%26groupid%3D25  https%3A::openqa.opensuse.org:group_overview:25  https%3A::openqa.opensuse.org:group_overview:25.json
tests/issue_tracker/: https%3A::user%3Apassword%40apibugzilla.novell.com:buglist.cgi%3Fquicksearch%3D%22https%253A%252F%252Fopenqa.suse.de%252Ftests%252F180243%22
tests/job_group_after_openqa_9b50b22/: :tests:overview%3Fdistri%3Dopensuse%26version%3D42.3%26build%3D0209%26groupid%3D70  :tests:overview%3Fdistri%3Dopensuse%26version%3D42.3%26build%3D0211%26groupid%3D70  http%3A::openqa.opensuse.org:group_overview:70.json
tests/live/: :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1-Live%26build%3D0104%25400350%26groupid%3D27  :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1-Live%26build%3D0104%25400351%26groupid%3D27  https%3A::openqa.opensuse.org:group_overview:27  https%3A::openqa.opensuse.org:group_overview:27.json
tests/live_no_review/: :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1-Live%26build%3D0104%25400350%26groupid%3D27  :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1-Live%26build%3D0104%25400351%26groupid%3D27  https%3A::openqa.opensuse.org:group_overview:27  https%3A::openqa.opensuse.org:group_overview:27.json
tests/multi_version/: :tests:overview%3Fdistri%3Dsle%26version%3D12-SP4%26build%3D0456%26groupid%3D139  :tests:overview%3Fdistri%3Dsle%26version%3D12-SP5%26build%3D0109%26groupid%3D139  http%3A::openqa.suse.de:group_overview:139.json
tests/only_old_invalid_builds/: :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1%26build%3D76.2%26groupid%3D28  :tests:overview%3Fdistri%3Dopensuse%26version%3D42.1%26build%3D78.1%26groupid%3D28  (+1 more)
tests/skip-passed/: report-68-4.md  (+6 more)
(+111 files in other folders)
