[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openqa-review"
dynamic = ["version"]
description = "Tool for generating and reviewing openQA test reports"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "SUSE LLC" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4",
    "humanfriendly>=10.0",
    "pika",
    "pyopenssl",
    "PyYAML",
    "requests",
    "sortedcontainers",
]

[project.urls]
Homepage = "https://gitlab.suse.de/openqa/openqa-review.git"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage",
    "radon",
    "ty>=0.0.21",
    "setuptools",
]

[tool.ruff]
line-length = 120
preview = true
exclude = [".ropeproject", ".tox", "venv", "version.py", "setup.py", "__init__.py"]

[tool.ruff.lint]
# E, F: Standard pycodestyle and Pyflakes (default flake8)
# D: pydocstyle (for D100, D101, etc.)
# Q: flake8-quotes (for Q000)
# PL: Pylint
extend-select =[
    "E", "F", "D", "Q", "PL",
    "T100", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T2", # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TD", # https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "W",
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "ERA",
    "B",
    "SIM",
    "C4",
    "T10",
    "FIX",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "T20",
    "RSE",
    "RET",
    "SLF",
    "FURB",
    "EXE",
    "BLE",
    "A",
    "DTZ",
    "LOG",
    "G",
    "C90",
    "PERF",
    "PGH",
    "ARG",
    "RUF",
    "ANN",
    "S", # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "FBT", # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "TRY", # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "DOC", # https://docs.astral.sh/ruff/rules/#pydoclint-doc
    "YTT", # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
    "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "COM", # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "CPY", # https://docs.astral.sh/ruff/rules/#flake8-copyright-cpy
    "EM", # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "INT", # https://docs.astral.sh/ruff/rules/#flake8-gettext-int
    "PYI", # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "PT", # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "SLOT", # https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "TID", # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TC", # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "PTH", # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "FLY", # https://docs.astral.sh/ruff/rules/#flynt-fly
    "NPY", # https://docs.astral.sh/ruff/rules/#numpy-specific-rules-npy
    "PD", # https://docs.astral.sh/ruff/rules/#pandas-vet-pd
    "N", # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PLE", # https://docs.astral.sh/ruff/rules/#error-ple
    "PLR", # https://docs.astral.sh/ruff/rules/#refactor-plr
    "PLW", # https://docs.astral.sh/ruff/rules/#warning-plw
    "FA", # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

ignore = [
    "D203",   # incorrect-blank-line-before-class
    "PLC1802", # use-implicit-booleaness-not-len
    "D213", # multi-line-summary-second-line
    "PLR0904", # too-many-public-methods
    "DOC201", # docstring-missing-returns
    "DOC501", # docstring-missing-exception
    "COM812", # missing-trailing-comma
    "TD003",  # missing-todo-link
    "FIX002", # line-contains-todo
]

[tool.ruff.lint.mccabe]
max-complexity = 9

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004", "ANN401", "PLR0913", "S101", "S105", "S106", "PLR0917", "D103",
    "INP001",  # tests intentionally has no __init__.py; using pytest importlib mode
    "PT011", "PT012", "PT017",  # pre-existing pytest style
]
"openqa_review/tumblesle_release.py" = ["S404", "S603",]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint.flake8-copyright]
author = "SUSE LLC"
notice-rgx = "Copyright"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"os.system".msg = "Use `subprocess.run` or `sh` library instead."
"subprocess.call".msg = "Use `subprocess.run` with `check=True`."

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[tool.ty.terminal]
error-on-warning = true
